# kukadu

./: .CMakeLists.txt.swp  .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt~  README  README~  jointdmp.cpp  jointdmp.h  makefile  package.xml  package.xml~
cfg/: book.prop  book_pick.prop  haptic.prop  pouring.prop
devel/: .catkin  .rosinstall  setup.sh
doc/: doxygen
doc/html/: actionclip_8hpp_source.html  annotated.html  cartesiandmp_8hpp_source.html  cartesiandmplearner_8hpp_source.html  classKukaduException-members.html  classKukaduException.html  classPCTransformator-members.html  classPCTransformator.html  classes.html  classkukadu_1_1ActionClip-members.html  classkukadu_1_1ActionClip.html  classkukadu_1_1CartesianDMP-members.html  classkukadu_1_1CartesianDMP.html  classkukadu_1_1CartesianDMPLearner-members.html  classkukadu_1_1CartesianDMPLearner.html  classkukadu_1_1Clip-members.html  classkukadu_1_1Clip.html  classkukadu_1_1Clusters-members.html  classkukadu_1_1Clusters.html  classkukadu_1_1ComplexController-members.html  classkukadu_1_1ComplexController.html  classkukadu_1_1Constraint-members.html  classkukadu_1_1Constraint.html  classkukadu_1_1ControlQueue-members.html  classkukadu_1_1ControlQueue.html  classkukadu_1_1Controller-members.html  classkukadu_1_1Controller.html  classkukadu_1_1ControllerActionClip-members.html  classkukadu_1_1ControllerActionClip.html  classkukadu_1_1ControllerResult-members.html  classkukadu_1_1ControllerResult.html  classkukadu_1_1CostComputer-members.html  classkukadu_1_1CostComputer.html  classkukadu_1_1CustomSet-members.html  classkukadu_1_1CustomSet.html  classkukadu_1_1DMPBase-members.html  classkukadu_1_1DMPBase.html  classkukadu_1_1DMPExecutor-members.html  classkukadu_1_1DMPExecutor.html  classkukadu_1_1DMPGeneralizer-members.html  (+364 more)
doc/latex/: annotated.tex  classkukadu_1_1KukieControlQueue.tex  classkukadu_1_1PlottingControlQueue.tex  classkukadu_1_1SensorStorage.tex  dir_0d353d24d0afa59909efab6593124f6d.tex  dir_e09be28ad72e9f9b6996be2a8aec0865.tex  files.tex  gettingstartedpage.tex  group__Control.tex  group__Robot.tex  installationpage.tex  kinematicspage.tex  kukiecontrolqueue_8hpp.tex  modules.tex  namespacekukadu.tex  refman.tex  robotpage.tex
documentation/: diagrams.asta  diagrams.asta.bak  diagrams_detailed.asta  overview_classes.png.bak
documentation/doxygen/: doxyconfig
include/: kukadu.h  kukadu.h~
include/kukadu/: control.hpp  kinematics.hpp  kukadu.h  kukadu.hpp  learning.hpp  manipulation.hpp  robot.hpp  types.hpp  utils.hpp  vision.hpp
matlab/: GaussianGenerator.m
misc/: pouring_output.txt
movements/: traj_6.5.txt
movements/advanced_gaussian_gen_mov/: traj_1.txt  traj_10.txt  traj_16.txt  traj_20.txt  traj_7.txt
movements/gaussian_gen_movement/: traj_1.txt  traj_10.txt  traj_10.txt~  traj_16.txt  traj_20.txt  traj_7.txt
movements/humanoids_2014/: backup_traj_13_266.txt  coefficients  eval_pouring_gries0.txt  eval_pouring_gries1.txt  eval_pouring_gries2.txt  eval_pouring_gries3.txt  eval_reaching.txt  pouring  query_8-5.txt  updateMetricsPouring.txt
movements/icra2016/: trainedps.txt
movements/iros2014/: query_8-8.txt  traj_8-8.txt
movements/orocos_demo/: leftscrew_old.txt  screw.txt  screw1.txt  screw2.txt  screw3.txt  test.txt
movements/pickup-1d/: query_6.txt  query_9.txt  traj_6.txt  traj_7.txt  traj_8.txt  traj_9.txt
movements/pickup-gen-2d/: query_1.txt  query_2.txt  query_3.txt  query_4.txt  query_5.txt  query_6.txt  traj_1.txt  traj_2.txt  traj_3.txt  traj_4.txt  traj_5.txt  traj_6.txt
movements/screwing_demo/: mounted_screwing.txt  mounted_screwing2.txt  mounted_screwing3.txt
movements/thesis_sample/: catching.txt  screw.txt
movements/two_arms/: backup_catch.txt  catch.txt  leftpickup.txt
scripts/2015-05-11_data_with_labels/: N5309222_bottom_0  N5309222_bottom_1  N5309222_bottom_10  N5309222_bottom_11  N5309222_bottom_12  N5309222_bottom_13  N5309222_bottom_2  N5309222_bottom_3  N5309222_bottom_4  N5309222_bottom_5  N5309222_bottom_6  N5309222_bottom_7  N5309222_bottom_8  N5309222_bottom_9  N5309222_cside_0  N5309222_cside_1  N5309222_cside_10  N5309222_cside_11  N5309222_cside_12  N5309222_cside_13  N5309222_cside_14  N5309222_cside_15  N5309222_cside_16  N5309222_cside_2  N5309222_cside_3  N5309222_cside_4  N5309222_cside_5  N5309222_cside_6  N5309222_cside_7  N5309222_cside_8  N5309222_cside_9  N5309222_oside_0  N5309222_oside_1  N5309222_oside_10  N5309222_oside_11  N5309222_oside_12  N5309222_oside_13  (+85 more)
src/: .gitignore  QuatDMPTest.cpp  SimInterfaceExample.cpp  collectData.cpp  gsm.cpp  guided.cpp  humanoids2014.cpp  icra2016.cpp  intellactScrewing.cpp  intellactScrewing2.cpp  iros2014.cpp  iros2015.cpp  main.cpp  mainDrill.cpp  mainScrew.cpp  mainScrewOrocos.cpp  teachingPush.cpp  techingPush.cpp  testPush.cpp  testing.cpp  testing.cpp.autosave  testingDMPcart.cpp
src/learning/projective_simulation/: CMakeLists.txt  README
src/learning/projective_simulation/application/: invasiongamereward.cpp  invasiongamereward.h  invasiongamereward.hpp  manualreward.cpp  manualreward.h  manualreward.hpp  neverendingcolorreward.cpp  neverendingcolorreward.h  neverendingcolorreward.hpp  trafficlightreward.cpp  trafficlightreward.h  trafficlightreward.hpp
src/learning/projective_simulation/core/: actionclip.cpp  actionclip.h  actionclip.hpp  clip.cpp  clip.h  clip.hpp  perceptclip.cpp  perceptclip.h  perceptclip.hpp  projectivesimulator.cpp  projectivesimulator.h  projectivesimulator.hpp  psevaluator.cpp  psevaluator.h  psevaluator.hpp  reward.cpp  reward.h  reward.hpp
src/learning/projective_simulation/executables/: evaluatenecolor.cpp  necolornoranking.cpp  necolorranking.cpp
src/learning/projective_simulation/utils/: Tokenizer.cpp  Tokenizer.h  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.h
src/learning/projective_simulation/visualization/: treedrawer.cpp  treedrawer.h  treedrawer.hpp
test/: kukadutest.cpp
tutorials/: cartesian_trajectories.cpp  control_queue.cpp  guided.cpp  komo_planning.cpp  moveit_planning.cpp  simple_planning.cpp  summary.cpp
(+1864 files in other folders)
