<?xml version="1.0"?>
<package>
    <name>kukadu</name>
    <version>0.0.0</version>
    <description>The kukadu package</description>

    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>iis_robot_dep</build_depend>
    <build_depend>iis_schunk_hardware</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>pr2_controllers_msgs</build_depend>
    <build_depend>cob_srvs</build_depend>
    <build_depend>planning_scene_plugin</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>pcl</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>vrep_common</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>pr2_controllers_msgs</run_depend>
    <run_depend>cob_srvs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>iis_robot_dep</run_depend>
    <run_depend>iis_schunk_hardware</run_depend>
    <run_depend>planning_scene_plugin</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>libpcl-all-dev</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>pcl</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>vrep_common</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
