<?xml version="1.0"?>
<package>
    <name>kukadu</name>
    <version>0.0.0</version>
    <description>The kukadu package</description>

    <maintainer email="simon.hangl@uibk.ac.at">simon hangl</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>libpcl-all</build_depend>
    <build_depend>moveit_core</build_depend>
    <build_depend>moveit_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>iis_robot_dep</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>eigen_conversions</build_depend>
    <build_depend>uibk_moveit_tools</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>libpcl-all</run_depend>
    <run_depend>moveit_core</run_depend>
    <run_depend>moveit_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>control_msgs</run_depend>
    <run_depend>iis_robot_dep</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>cmake_modules</run_depend>
    <run_depend>actionlib_msgs</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>libpcl-all-dev</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>eigen_conversions</run_depend>
    <run_depend>uibk_moveit_tools</run_depend>
    <run_depend>controller_manager</run_depend>
    <run_depend>moveit_ros_planning_interface</run_depend>

    <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
